--- a/bower.json
+++ b/bower.json
@@ -10,5 +10,8 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "components-font-awesome": "^4.7.0"
+  }
 }
