--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "gulp-sequence": "^0.4.6",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^3.0.0",
+    "gulp-util": "^3.0.8",
     "run-sequence": "^2.0.0",
-    "streamqueue": "^1.1.1",
-    "gulp-util": "^3.0.8"
+    "streamqueue": "^1.1.1"
+  },
+  "dependencies": {
+    "font-awesome": "^4.7.0"
   }
 }
