--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "streamqueue": "^1.1.1"
   },
   "dependencies": {
-    "font-awesome": "^4.7.0"
+    "animate.css": "^3.5.2",
+    "font-awesome": "^4.7.0",
+    "waypoints": "^4.0.1"
   }
 }
